@@ -128,8 +128,12 @@ def _initr(
     with openrlib.rlock:
         if isinitialized():
             return None
-        if openrlib.R_HOME is None:
+        elif openrlib.R_HOME is None:
             raise ValueError('openrlib.R_HOME cannot be None.')
+        elif openrlib.rlib.R_NilValue != ffi.NULL:
+            warnings.warn('R was initialized outside of rpy2 (R_NilValue != NULL). Trying to use it nevertheless.')
+            _setinitialized()
+            return None
         os.environ['R_HOME'] = openrlib.R_HOME
         options_c = [ffi.new('char[]', o.encode('ASCII')) for o in _options]
         n_options = len(options_c)
